@@ -1,3 +1,5 @@
+21-Mar-2017 Fixes #311. Added read-only property, C.CCompilableModuleContainer.Compiler, so that source containers can query the compiler in use, rather than needing to drill down to individual object files.
+
 19-Mar-2017 ======== Version 1.1.0 beta 2 Release ========
 
 19-Mar-2017 Fixes #310. Added VisualC 2017 support. Test built in Windows 8.1.
